prod/patch-deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  template:
    spec:
      containers:
        - name: web
          resources:
            requests:
              cpu: 15m
              memory: 105M
            limits:
              cpu: 15m
              memory: 105M
      volumes:
      - name: invoiceninja
        persistentVolumeClaim:
          claimName: invoiceninja-nfs-v5
