prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invoiceninja
spec:
  rules:
  - host: racuni.zuraj.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              name: http
  tls:
  - hosts:
    - racuni.zuraj.com
    secretName: racuni.zuraj.com-cert
